--- a/jamalyzer-client/styles/home/Home.module.css
+++ b/jamalyzer-client/styles/home/Home.module.css
@@ -4,4 +4,6 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+
+  position: relative;
 }
